--- a/src/component/NavBar/NavBar.scss
+++ b/src/component/NavBar/NavBar.scss
@@ -1,15 +1,15 @@
-ul {
-	padding: 0;
-	width: 100%;
-	background-color: gold;
-	display: flex;
-	justify-content: space-between;
-	list-style: none;
-}
+// ul {
+// 	padding: 0;
+// 	width: 100%;
+// 	background-color: gold;
+// 	display: flex;
+// 	justify-content: space-between;
+// 	list-style: none;
+// }
 
-li {
-	padding: 0;
-	margin: 0;
-	background-color: indianred;
-	color: white;
-}
+// li {
+// 	padding: 0;
+// 	margin: 0;
+// 	background-color: indianred;
+// 	color: white;
+// }
